Pass from mocha to jest

--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "typeScript-100",
-  "version": "1.0.0",
-  "scripts": {
-    "test": "mocha dist --recursive",
-    "start": "tsc -p . -w"
+  "name": "typescript-app",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Bogala/typescript-dojo/"
   },
-  "keywords": [],
-  "author": "pausouche, wolfgangGoedel",
-  "license": "MIT",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "@types/chai": "^3.4.34",
-    "@types/mocha": "^2.2.32",
-    "@types/node": "^6.0.41",
-    "chai": "^3.5.0",
-    "mocha": "^3.1.0",
-    "tslint": "latest",
-    "typescript": "next"
+    "react-ats-scripts": "1.0.50"
+  },
+  "scripts": {
+    "start": "react-ats-scripts test --env=jsdom",
+    "test": "react-ats-scripts test --env=jsdom"
+  },
+  "devDependencies": {
+    "@types/jest": "^21.1.9",
+    "@types/node": "^8.5.2"
   }
 }
